# ovito

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  cmake-variants.json
src/ovito/gui/base/: CMakeLists.txt  GUIBase.h
src/ovito/gui/base/actions/: ActionManager.cpp  ActionManager.h  AnimationActions.cpp  ViewportActions.cpp  ViewportModeAction.cpp  ViewportModeAction.h
src/ovito/gui/base/mainwin/: MainWindowInterface.cpp  MainWindowInterface.h  ModifierListModel.cpp  ModifierListModel.h  OverlayListItem.cpp  OverlayListItem.h  OverlayListModel.cpp  OverlayListModel.h  OverlayTypesModel.cpp  OverlayTypesModel.h  PipelineListItem.cpp  PipelineListItem.h  PipelineListModel.cpp  PipelineListModel.h  UserInterface.cpp  UserInterface.h
src/ovito/gui/base/rendering/: PickingSceneRenderer.cpp  PickingSceneRenderer.h  ViewportSceneRenderer.cpp  ViewportSceneRenderer.h
src/ovito/gui/base/resources/: guibase.qrc
src/ovito/gui/base/viewport/: BaseViewportWindow.cpp  BaseViewportWindow.h  NavigationModes.cpp  NavigationModes.h  SelectionMode.cpp  SelectionMode.h  ViewportInputManager.cpp  ViewportInputManager.h  ViewportInputMode.cpp  ViewportInputMode.h
src/ovito/gui/qml/: CMakeLists.txt  GUI.h
src/ovito/gui/qml/app/: WasmApplication.cpp  WasmApplication.h
src/ovito/gui/qml/dataset/: WasmDataSetContainer.cpp  WasmDataSetContainer.h  WasmFileManager.cpp  WasmFileManager.h
src/ovito/gui/qml/mainwin/: MainWindow.cpp  MainWindow.h  MouseGrabWorkaround.cpp  MouseGrabWorkaround.h  ViewportsPanel.cpp  ViewportsPanel.h
src/ovito/gui/qml/properties/: DataObjectReferenceParameterUI.cpp  DataObjectReferenceParameterUI.h  ModifierDelegateParameterUI.cpp  ModifierDelegateParameterUI.h  ParameterUI.cpp  ParameterUI.h  RefTargetListParameterUI.cpp  RefTargetListParameterUI.h
src/ovito/gui/qml/resources/: gui.qrc  main.qml
src/ovito/gui/qml/resources/OvitoStyle/: CheckBox.qml  CheckIndicator.qml  ComboBox.qml  GroupBox.qml  MultilineTextEdit.qml  SpinBox.qml  SplitView.qml  ToolBar.qml  ToolButton.qml  qmldir
src/ovito/gui/qml/resources/editors/: FileSource.qml
src/ovito/gui/qml/resources/ui/: AboutDialog.qml  AnimationBar.qml  BooleanCheckBoxParameter.qml  BooleanRadioButtonParameter.qml  ColorParameter.qml  ColorPicker.qml  ColorPickerPopup.qml  CommandPanel.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomRadioButton.qml  DataObjectReferenceParameter.qml  EmbeddedPropertiesEditor.qml  ErrorDialog.qml  FloatParameter.qml  ImportDialog.qml  IntegerParameter.qml  IntegerRadioButtonParameter.qml  MatrixParameter.qml  ModifierDelegateParameter.qml  ModifierListBox.qml  ObjectStatusWidget.qml  ParameterLabel.qml  PipelineEditor.qml  PipelineTab.qml  PropertiesEditor.qml  PropertyReferenceParameter.qml  QuickViewportWindow.qml  RefTargetListParameter.qml  RolloutPanel.qml  Spinner.qml  StatusBar.qml  StringParameter.qml  StringTextEditParameter.qml  SubobjectEditor.qml  SystemReportDialog.qml  TableViewWithHeader.qml  ToolBar.qml  VariantComboBoxParameter.qml  Vector3Parameter.qml  (+1 more)
src/ovito/gui/qml/viewport/: QuickViewportWindow.cpp  QuickViewportWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/ovito/vulkan/: CMakeLists.txt  OffscreenVulkanSceneRenderer.cpp  OffscreenVulkanSceneRenderer.h  ViewportVulkanSceneRenderer.cpp  ViewportVulkanSceneRenderer.h  VulkanContext.cpp  VulkanContext.h  VulkanCylinderPrimitive.cpp  VulkanCylinderPrimitive.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImagePrimitive.cpp  VulkanImagePrimitive.h  VulkanLinePrimitive.cpp  VulkanLinePrimitive.h  VulkanMeshPrimitive.cpp  VulkanMeshPrimitive.h  VulkanParticlePrimitive.cpp  VulkanParticlePrimitive.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSceneRenderer.cpp  VulkanSceneRenderer.h  VulkanTextPrimitive.cpp  VulkanTextPrimitive.h
src/ovito/vulkan/gui/: CMakeLists.txt  PickingVulkanSceneRenderer.cpp  PickingVulkanSceneRenderer.h  ViewportVulkanSceneRenderer.cpp  ViewportVulkanSceneRenderer.h  VulkanViewportWindow.cpp  VulkanViewportWindow.h
src/ovito/vulkan/resources/: global_uniforms.glsl  picking.glsl  shading.glsl  utilities.glsl  vulkan.qrc
src/ovito/vulkan/resources/cylinder/: arrow_flat.vert  arrow_flat.vert.spv  arrow_head.frag  arrow_head.frag.spv  arrow_head.vert  arrow_head.vert.spv  arrow_head_picking.frag  arrow_head_picking.frag.spv  arrow_head_picking.vert  arrow_head_picking.vert.spv  arrow_tail.vert  arrow_tail.vert.spv  arrow_tail_picking.vert  arrow_tail_picking.vert.spv  cylinder.frag  cylinder.vert  cylinder.vert.spv  cylinder_flat.frag  cylinder_flat.vert  cylinder_flat.vert.spv  cylinder_flat_picking.vert  cylinder_flat_picking.vert.spv  cylinder_picking.vert  cylinder_picking.vert.spv
src/ovito/vulkan/resources/image/: image.frag  image.frag.spv  image.vert  image.vert.spv
src/ovito/vulkan/resources/lines/: lines_thin_picking.vert  lines_thin_picking.vert.spv  lines_thin_uniform_color.frag  lines_thin_uniform_color.vert  lines_thin_uniform_color.vert.spv  lines_thin_with_colors.vert  thin_picking.vert
src/ovito/vulkan/resources/mesh/: mesh_color_mapping.frag  mesh_color_mapping.frag.spv  mesh_color_mapping.vert  mesh_color_mapping.vert.spv
src/ovito/vulkan/resources/particles/box/: box.vert  box.vert.spv  box_picking.vert  box_picking.vert.spv
src/ovito/vulkan/resources/particles/circle/: circle.vert  circle.vert.spv  circle_picking.vert  circle_picking.vert.spv
src/ovito/vulkan/resources/particles/cube/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  cube_picking.frag  cube_picking.frag.spv  cube_picking.vert  cube_picking.vert.spv
src/ovito/vulkan/resources/particles/ellipsoid/: ellipsoid.frag  ellipsoid.frag.spv  ellipsoid.vert  ellipsoid.vert.spv  ellipsoid_picking.frag  ellipsoid_picking.frag.spv  ellipsoid_picking.vert  ellipsoid_picking.vert.spv
src/ovito/vulkan/resources/particles/imposter/: imposter.vert  imposter.vert.spv  (+2 more)
src/ovito/vulkan/vma/: VulkanMemoryAllocator.h  vk_mem_alloc.cpp  vk_mem_alloc.h
src/ovito_exe/: CMakeLists.txt  Main.cpp  MainQml.cpp
src/ovito_exe/resources/: Info.plist
src/ovito_exe/wasm/: index.html  wasm_shell.html
(+1975 files in other folders)
